Update project configuration and add CTGZeroVotes contract with tests

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@borodutch/smart-contract-starter",
+  "name": "@backmeupplz/ctg-zero-vote",
   "version": "0.0.1",
-  "description": "A starter for Solidity smart contracts for Ethereum",
+  "description": "CTG zero vote strategy",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Borodutch/smart-contract-starter"
+    "url": "git+https://github.com/backmeupplz/ctg-zero-vote.git"
   },
   "license": "MIT",
   "np": {
@@ -22,7 +22,10 @@
     "build": "yarn clean && npx hardhat compile",
     "clean": "npx hardhat clean",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run --network deploy scripts/deploy.ts",
+    "deploy-mainnet": "npx hardhat run --network mainnet scripts/deploy.ts",
+    "deploy-testnet": "npx hardhat run --network testnet scripts/deploy.ts",
+    "upgrade-mainnet": "npx hardhat run --network mainnet scripts/upgrade.ts",
+    "upgrade-testnet": "npx hardhat run --network testnet scripts/upgrade.ts",
     "eth-lint": "yarn solhint 'contracts/**/*.sol'",
     "lint": "prettier --check . && eslint --max-warnings 0 scripts test && yarn eth-lint",
     "release": "np",
@@ -73,5 +76,9 @@
     "typechain": "^8.3.2",
     "typescript": "^5.8.2"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.7.0",
+  "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0"
+  }
 }
